[package]
name = "wasm_bean_counters"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3.70"
features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "Window",
  "Document",
  "console",
  "EventTarget",
  "MouseEvent",
  "ImageData",
]


[lib]
crate-type = ["cdylib"]
